--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "main": "./dist/cjs/index.js",
   "module": "./dist/esm/index.js",
   "scripts": {
-    "prepare": "npm run build",
+    "prepare": "npm run clean && npm run build:esm && npm run build:cjs && npm run build:copy-styles",
     "start": "npm run dev",
     "dev": "(cd ./example && vite)",
     "build": "npm run clean && npm run build:esm && npm run build:cjs && npm run build:copy-styles && npm run build:example",
